crates/monospace-core/src/snapshots/gallery/monospace_core__shape__gallery__level_1_complete_shapes.snap
---
source: crates/monospace-core/src/shape/gallery.rs
description: "A gallery: a chosen set of examples, one block each, for reading rather than for coverage. Each label is derived from the value that drew the block, so it cannot disagree with it. Under each picture is the surface that picture came from: a count of the positions the figure wrote, then a row for each of them, saying what that position renders, what each of its four arms holds, and the base stroke every Set arm is drawn in. A Set arm names the stroke; Unset and Closed are the model's own two words for the other two. A position the figure left unwritten is a hole in the picture rather than a row here, and the count is how many there are. A literal has no arms, so its arm columns are empty. A block moving means a figure changed, and what moved is the thing to look at — the same acceptance a characterization gets, without its claim of covering a range."
expression: body
---
BoxShape { at: Pos { x: 0, y: 0 }, size: Size { width: 6, height: 3 }, stroke: Stroke("light"), fill: None }
  ┌────┐
  │    │
  └────┘
  wrote 14 of 18 positions
  | at  | glyph | top   | right | bottom | left  | base  |
  | --- | ----- | ----- | ----- | ------ | ----- | ----- |
  | 0,0 | ┌     | Unset | light | light  | Unset | light |
  | 1,0 | ─     | Unset | light | Unset  | light | light |
  | 2,0 | ─     | Unset | light | Unset  | light | light |
  | 3,0 | ─     | Unset | light | Unset  | light | light |
  | 4,0 | ─     | Unset | light | Unset  | light | light |
  | 5,0 | ┐     | Unset | Unset | light  | light | light |
  | 0,1 | │     | light | Unset | light  | Unset | light |
  | 5,1 | │     | light | Unset | light  | Unset | light |
  | 0,2 | └     | light | light | Unset  | Unset | light |
  | 1,2 | ─     | Unset | light | Unset  | light | light |
  | 2,2 | ─     | Unset | light | Unset  | light | light |
  | 3,2 | ─     | Unset | light | Unset  | light | light |
  | 4,2 | ─     | Unset | light | Unset  | light | light |
  | 5,2 | ┘     | light | Unset | Unset  | light | light |

BoxShape { at: Pos { x: 0, y: 0 }, size: Size { width: 6, height: 3 }, stroke: Stroke("light"), fill: Some(Glyph(".")) }
  ┌────┐
  │....│
  └────┘
  wrote 18 of 18 positions
  | at  | glyph | top    | right  | bottom | left   | base  |
  | --- | ----- | ------ | ------ | ------ | ------ | ----- |
  | 0,0 | ┌     | Unset  | light  | light  | Unset  | light |
  | 1,0 | ─     | Unset  | light  | Closed | light  | light |
  | 2,0 | ─     | Unset  | light  | Closed | light  | light |
  | 3,0 | ─     | Unset  | light  | Closed | light  | light |
  | 4,0 | ─     | Unset  | light  | Closed | light  | light |
  | 5,0 | ┐     | Unset  | Unset  | light  | light  | light |
  | 0,1 | │     | light  | Closed | light  | Unset  | light |
  | 1,1 | .     |        |        |        |        |       |
  | 2,1 | .     |        |        |        |        |       |
  | 3,1 | .     |        |        |        |        |       |
  | 4,1 | .     |        |        |        |        |       |
  | 5,1 | │     | light  | Unset  | light  | Closed | light |
  | 0,2 | └     | light  | light  | Unset  | Unset  | light |
  | 1,2 | ─     | Closed | light  | Unset  | light  | light |
  | 2,2 | ─     | Closed | light  | Unset  | light  | light |
  | 3,2 | ─     | Closed | light  | Unset  | light  | light |
  | 4,2 | ─     | Closed | light  | Unset  | light  | light |
  | 5,2 | ┘     | light  | Unset  | Unset  | light  | light |

BoxShape { at: Pos { x: 0, y: 0 }, size: Size { width: 2, height: 2 }, stroke: Stroke("light"), fill: None }
  ┌┐
  └┘
  wrote 4 of 4 positions
  | at  | glyph | top   | right | bottom | left  | base  |
  | --- | ----- | ----- | ----- | ------ | ----- | ----- |
  | 0,0 | ┌     | Unset | light | light  | Unset | light |
  | 1,0 | ┐     | Unset | Unset | light  | light | light |
  | 0,1 | └     | light | light | Unset  | Unset | light |
  | 1,1 | ┘     | light | Unset | Unset  | light | light |

Line { at: Pos { x: 0, y: 0 }, len: 5, orientation: Horizontal, stroke: Stroke("light") }
  ─────
  wrote 5 of 5 positions
  | at  | glyph | top   | right | bottom | left  | base  |
  | --- | ----- | ----- | ----- | ------ | ----- | ----- |
  | 0,0 | ─     | Unset | light | Unset  | Unset | light |
  | 1,0 | ─     | Unset | light | Unset  | light | light |
  | 2,0 | ─     | Unset | light | Unset  | light | light |
  | 3,0 | ─     | Unset | light | Unset  | light | light |
  | 4,0 | ─     | Unset | Unset | Unset  | light | light |

Line { at: Pos { x: 0, y: 0 }, len: 0, orientation: Horizontal, stroke: Stroke("light") }

  wrote 0 of 5 positions
  | at | glyph | top | right | bottom | left | base |
  | -- | ----- | --- | ----- | ------ | ---- | ---- |
