crates/monospace-core/src/snapshots/gallery/monospace_core__shape__gallery__level_1_connector.snap
---
source: crates/monospace-core/src/shape/gallery.rs
description: "A gallery: a chosen set of examples, one block each, for reading rather than for coverage. Each label is derived from the value that drew the block, so it cannot disagree with it. Under each picture is the surface that picture came from: a count of the positions the figure wrote, then a row for each of them, saying what that position renders, what each of its four arms holds, and the base stroke every Set arm is drawn in. A Set arm names the stroke; Unset and Closed are the model's own two words for the other two. A position the figure left unwritten is a hole in the picture rather than a row here, and the count is how many there are. A literal has no arms, so its arm columns are empty. A block moving means a figure changed, and what moved is the thing to look at — the same acceptance a characterization gets, without its claim of covering a range."
expression: body
---
Connector { from: Endpoint { at: Pos { x: 0, y: 0 }, leaving: Down, terminal: Glyph { glyph: Glyph("▲") } }, to: Endpoint { at: Pos { x: 4, y: 3 }, leaving: Left, terminal: Glyph { glyph: Glyph("►") } }, stroke: Stroke("light") }
  ▲
  │
  │
  └───►
  wrote 8 of 20 positions
  | at  | glyph | top   | right | bottom | left  | base  |
  | --- | ----- | ----- | ----- | ------ | ----- | ----- |
  | 0,0 | ▲     |       |       |        |       |       |
  | 0,1 | │     | light | Unset | light  | Unset | light |
  | 0,2 | │     | light | Unset | light  | Unset | light |
  | 0,3 | └     | light | light | Unset  | Unset | light |
  | 1,3 | ─     | Unset | light | Unset  | light | light |
  | 2,3 | ─     | Unset | light | Unset  | light | light |
  | 3,3 | ─     | Unset | light | Unset  | light | light |
  | 4,3 | ►     |       |       |        |       |       |

Connector { from: Endpoint { at: Pos { x: 0, y: 0 }, leaving: Right, terminal: Glyph { glyph: Glyph("◄") } }, to: Endpoint { at: Pos { x: 4, y: 3 }, leaving: Up, terminal: Glyph { glyph: Glyph("▼") } }, stroke: Stroke("light") }
  ◄───┐
      │
      │
      ▼
  wrote 8 of 20 positions
  | at  | glyph | top   | right | bottom | left  | base  |
  | --- | ----- | ----- | ----- | ------ | ----- | ----- |
  | 0,0 | ◄     |       |       |        |       |       |
  | 1,0 | ─     | Unset | light | Unset  | light | light |
  | 2,0 | ─     | Unset | light | Unset  | light | light |
  | 3,0 | ─     | Unset | light | Unset  | light | light |
  | 4,0 | ┐     | Unset | Unset | light  | light | light |
  | 4,1 | │     | light | Unset | light  | Unset | light |
  | 4,2 | │     | light | Unset | light  | Unset | light |
  | 4,3 | ▼     |       |       |        |       |       |

Connector { from: Endpoint { at: Pos { x: 0, y: 0 }, leaving: Right, terminal: Glyph { glyph: Glyph("◄") } }, to: Endpoint { at: Pos { x: 6, y: 0 }, leaving: Left, terminal: Glyph { glyph: Glyph("►") } }, stroke: Stroke("light") }
  ◄─────►
  wrote 7 of 7 positions
  | at  | glyph | top   | right | bottom | left  | base  |
  | --- | ----- | ----- | ----- | ------ | ----- | ----- |
  | 0,0 | ◄     |       |       |        |       |       |
  | 1,0 | ─     | Unset | light | Unset  | light | light |
  | 2,0 | ─     | Unset | light | Unset  | light | light |
  | 3,0 | ─     | Unset | light | Unset  | light | light |
  | 4,0 | ─     | Unset | light | Unset  | light | light |
  | 5,0 | ─     | Unset | light | Unset  | light | light |
  | 6,0 | ►     |       |       |        |       |       |

Connector { from: Endpoint { at: Pos { x: 0, y: 0 }, leaving: Right, terminal: Glyph { glyph: Glyph("◄") } }, to: Endpoint { at: Pos { x: 6, y: 2 }, leaving: Left, terminal: Glyph { glyph: Glyph("►") } }, stroke: Stroke("light") }
  ◄──┐
     │
     └──►
  wrote 9 of 21 positions
  | at  | glyph | top   | right | bottom | left  | base  |
  | --- | ----- | ----- | ----- | ------ | ----- | ----- |
  | 0,0 | ◄     |       |       |        |       |       |
  | 1,0 | ─     | Unset | light | Unset  | light | light |
  | 2,0 | ─     | Unset | light | Unset  | light | light |
  | 3,0 | ┐     | Unset | Unset | light  | light | light |
  | 3,1 | │     | light | Unset | light  | Unset | light |
  | 3,2 | └     | light | light | Unset  | Unset | light |
  | 4,2 | ─     | Unset | light | Unset  | light | light |
  | 5,2 | ─     | Unset | light | Unset  | light | light |
  | 6,2 | ►     |       |       |        |       |       |

Connector { from: Endpoint { at: Pos { x: 2, y: 0 }, leaving: Right, terminal: Glyph { glyph: Glyph("◄") } }, to: Endpoint { at: Pos { x: 8, y: 2 }, leaving: Left, terminal: Glyph { glyph: Glyph("►") } }, stroke: Stroke("light") }
    ◄──┐
       │
       └──►
  wrote 9 of 27 positions
  | at  | glyph | top   | right | bottom | left  | base  |
  | --- | ----- | ----- | ----- | ------ | ----- | ----- |
  | 2,0 | ◄     |       |       |        |       |       |
  | 3,0 | ─     | Unset | light | Unset  | light | light |
  | 4,0 | ─     | Unset | light | Unset  | light | light |
  | 5,0 | ┐     | Unset | Unset | light  | light | light |
  | 5,1 | │     | light | Unset | light  | Unset | light |
  | 5,2 | └     | light | light | Unset  | Unset | light |
  | 6,2 | ─     | Unset | light | Unset  | light | light |
  | 7,2 | ─     | Unset | light | Unset  | light | light |
  | 8,2 | ►     |       |       |        |       |       |

Connector { from: Endpoint { at: Pos { x: 2, y: 0 }, leaving: Left, terminal: Glyph { glyph: Glyph("►") } }, to: Endpoint { at: Pos { x: 8, y: 2 }, leaving: Right, terminal: Glyph { glyph: Glyph("◄") } }, stroke: Stroke("light") }
   ┌►
   └───────┐
          ◄┘
  wrote 13 of 30 positions
  | at  | glyph | top   | right | bottom | left  | base  |
  | --- | ----- | ----- | ----- | ------ | ----- | ----- |
  | 1,0 | ┌     | Unset | light | light  | Unset | light |
  | 2,0 | ►     |       |       |        |       |       |
  | 1,1 | └     | light | light | Unset  | Unset | light |
  | 2,1 | ─     | Unset | light | Unset  | light | light |
  | 3,1 | ─     | Unset | light | Unset  | light | light |
  | 4,1 | ─     | Unset | light | Unset  | light | light |
  | 5,1 | ─     | Unset | light | Unset  | light | light |
  | 6,1 | ─     | Unset | light | Unset  | light | light |
  | 7,1 | ─     | Unset | light | Unset  | light | light |
  | 8,1 | ─     | Unset | light | Unset  | light | light |
  | 9,1 | ┐     | Unset | Unset | light  | light | light |
  | 8,2 | ◄     |       |       |        |       |       |
  | 9,2 | ┘     | light | Unset | Unset  | light | light |

Connector { from: Endpoint { at: Pos { x: 2, y: 0 }, leaving: Left, terminal: Glyph { glyph: Glyph("►") } }, to: Endpoint { at: Pos { x: 8, y: 2 }, leaving: Down, terminal: Glyph { glyph: Glyph("▲") } }, stroke: Stroke("light") }
   ┌►
   │
   │      ▲
   └──────┘
  wrote 13 of 36 positions
  | at  | glyph | top   | right | bottom | left  | base  |
  | --- | ----- | ----- | ----- | ------ | ----- | ----- |
  | 1,0 | ┌     | Unset | light | light  | Unset | light |
  | 2,0 | ►     |       |       |        |       |       |
  | 1,1 | │     | light | Unset | light  | Unset | light |
  | 1,2 | │     | light | Unset | light  | Unset | light |
  | 8,2 | ▲     |       |       |        |       |       |
  | 1,3 | └     | light | light | Unset  | Unset | light |
  | 2,3 | ─     | Unset | light | Unset  | light | light |
  | 3,3 | ─     | Unset | light | Unset  | light | light |
  | 4,3 | ─     | Unset | light | Unset  | light | light |
  | 5,3 | ─     | Unset | light | Unset  | light | light |
  | 6,3 | ─     | Unset | light | Unset  | light | light |
  | 7,3 | ─     | Unset | light | Unset  | light | light |
  | 8,3 | ┘     | light | Unset | Unset  | light | light |

Connector { from: Endpoint { at: Pos { x: 2, y: 0 }, leaving: Right, terminal: Glyph { glyph: Glyph("◄") } }, to: Endpoint { at: Pos { x: 4, y: 1 }, leaving: Left, terminal: Glyph { glyph: Glyph("►") } }, stroke: Stroke("light") }
    ◄┐
     └►
  wrote 4 of 10 positions
  | at  | glyph | top   | right | bottom | left  | base  |
  | --- | ----- | ----- | ----- | ------ | ----- | ----- |
  | 2,0 | ◄     |       |       |        |       |       |
  | 3,0 | ┐     | Unset | Unset | light  | light | light |
  | 3,1 | └     | light | light | Unset  | Unset | light |
  | 4,1 | ►     |       |       |        |       |       |

Connector { from: Endpoint { at: Pos { x: 2, y: 0 }, leaving: Left, terminal: Glyph { glyph: Glyph("►") } }, to: Endpoint { at: Pos { x: 3, y: 2 }, leaving: Right, terminal: Glyph { glyph: Glyph("◄") } }, stroke: Stroke("light") }
   ┌►
   └──┐
     ◄┘
  wrote 8 of 15 positions
  | at  | glyph | top   | right | bottom | left  | base  |
  | --- | ----- | ----- | ----- | ------ | ----- | ----- |
  | 1,0 | ┌     | Unset | light | light  | Unset | light |
  | 2,0 | ►     |       |       |        |       |       |
  | 1,1 | └     | light | light | Unset  | Unset | light |
  | 2,1 | ─     | Unset | light | Unset  | light | light |
  | 3,1 | ─     | Unset | light | Unset  | light | light |
  | 4,1 | ┐     | Unset | Unset | light  | light | light |
  | 3,2 | ◄     |       |       |        |       |       |
  | 4,2 | ┘     | light | Unset | Unset  | light | light |

Connector { from: Endpoint { at: Pos { x: 0, y: 0 }, leaving: Right, terminal: Arm }, to: Endpoint { at: Pos { x: 6, y: 0 }, leaving: Left, terminal: Arm }, stroke: Stroke("light") }
  ───────
  wrote 7 of 7 positions
  | at  | glyph | top   | right | bottom | left  | base  |
  | --- | ----- | ----- | ----- | ------ | ----- | ----- |
  | 0,0 | ─     | Unset | light | Unset  | Unset | light |
  | 1,0 | ─     | Unset | light | Unset  | light | light |
  | 2,0 | ─     | Unset | light | Unset  | light | light |
  | 3,0 | ─     | Unset | light | Unset  | light | light |
  | 4,0 | ─     | Unset | light | Unset  | light | light |
  | 5,0 | ─     | Unset | light | Unset  | light | light |
  | 6,0 | ─     | Unset | Unset | Unset  | light | light |

Connector { from: Endpoint { at: Pos { x: 0, y: 0 }, leaving: Down, terminal: Arm }, to: Endpoint { at: Pos { x: 4, y: 3 }, leaving: Left, terminal: Arm }, stroke: Stroke("light") }
  │
  │
  │
  └────
  wrote 8 of 20 positions
  | at  | glyph | top   | right | bottom | left  | base  |
  | --- | ----- | ----- | ----- | ------ | ----- | ----- |
  | 0,0 | │     | Unset | Unset | light  | Unset | light |
  | 0,1 | │     | light | Unset | light  | Unset | light |
  | 0,2 | │     | light | Unset | light  | Unset | light |
  | 0,3 | └     | light | light | Unset  | Unset | light |
  | 1,3 | ─     | Unset | light | Unset  | light | light |
  | 2,3 | ─     | Unset | light | Unset  | light | light |
  | 3,3 | ─     | Unset | light | Unset  | light | light |
  | 4,3 | ─     | Unset | Unset | Unset  | light | light |

Connector { from: Endpoint { at: Pos { x: 2, y: 1 }, leaving: Right, terminal: Glyph { glyph: Glyph("◄") } }, to: Endpoint { at: Pos { x: 2, y: 1 }, leaving: Left, terminal: Glyph { glyph: Glyph("►") } }, stroke: Stroke("light") }

   ┌►┐
   └─┘
  wrote 6 of 15 positions
  | at  | glyph | top   | right | bottom | left  | base  |
  | --- | ----- | ----- | ----- | ------ | ----- | ----- |
  | 1,1 | ┌     | Unset | light | light  | Unset | light |
  | 2,1 | ►     |       |       |        |       |       |
  | 3,1 | ┐     | Unset | Unset | light  | light | light |
  | 1,2 | └     | light | light | Unset  | Unset | light |
  | 2,2 | ─     | Unset | light | Unset  | light | light |
  | 3,2 | ┘     | light | Unset | Unset  | light | light |
