crates/monospace-core/src/snapshots/gallery/monospace_core__shape__gallery__level_1_route.snap
---
source: crates/monospace-core/src/shape/gallery.rs
description: "A gallery: a chosen set of examples, one block each, for reading rather than for coverage. Each label is derived from the value that drew the block, so it cannot disagree with it. Under each picture is the surface that picture came from: a count of the positions the figure wrote, then a row for each of them, saying what that position renders, what each of its four arms holds, and the base stroke every Set arm is drawn in. A Set arm names the stroke; Unset and Closed are the model's own two words for the other two. A position the figure left unwritten is a hole in the picture rather than a row here, and the count is how many there are. A literal has no arms, so its arm columns are empty. A block moving means a figure changed, and what moved is the thing to look at — the same acceptance a characterization gets, without its claim of covering a range."
expression: body
---
Route { from: Pos { x: 0, y: 0 }, to: Pos { x: 6, y: 0 }, positions: [Pos { x: 1, y: 0 }, Pos { x: 2, y: 0 }, Pos { x: 3, y: 0 }, Pos { x: 4, y: 0 }, Pos { x: 5, y: 0 }], stroke: Stroke("light") }
   ─────
  wrote 5 of 7 positions
  | at  | glyph | top   | right | bottom | left  | base  |
  | --- | ----- | ----- | ----- | ------ | ----- | ----- |
  | 1,0 | ─     | Unset | light | Unset  | light | light |
  | 2,0 | ─     | Unset | light | Unset  | light | light |
  | 3,0 | ─     | Unset | light | Unset  | light | light |
  | 4,0 | ─     | Unset | light | Unset  | light | light |
  | 5,0 | ─     | Unset | light | Unset  | light | light |

Route { from: Pos { x: 0, y: 0 }, to: Pos { x: 4, y: 3 }, positions: [Pos { x: 0, y: 1 }, Pos { x: 0, y: 2 }, Pos { x: 0, y: 3 }, Pos { x: 1, y: 3 }, Pos { x: 2, y: 3 }, Pos { x: 3, y: 3 }], stroke: Stroke("light") }

  │
  │
  └───
  wrote 6 of 20 positions
  | at  | glyph | top   | right | bottom | left  | base  |
  | --- | ----- | ----- | ----- | ------ | ----- | ----- |
  | 0,1 | │     | light | Unset | light  | Unset | light |
  | 0,2 | │     | light | Unset | light  | Unset | light |
  | 0,3 | └     | light | light | Unset  | Unset | light |
  | 1,3 | ─     | Unset | light | Unset  | light | light |
  | 2,3 | ─     | Unset | light | Unset  | light | light |
  | 3,3 | ─     | Unset | light | Unset  | light | light |

Route { from: Pos { x: 2, y: 0 }, to: Pos { x: 8, y: 2 }, positions: [Pos { x: 1, y: 0 }, Pos { x: 1, y: 1 }, Pos { x: 2, y: 1 }, Pos { x: 3, y: 1 }, Pos { x: 4, y: 1 }, Pos { x: 5, y: 1 }, Pos { x: 6, y: 1 }, Pos { x: 7, y: 1 }, Pos { x: 8, y: 1 }, Pos { x: 9, y: 1 }, Pos { x: 9, y: 2 }], stroke: Stroke("light") }
   ┌
   └───────┐
           ┘
  wrote 11 of 30 positions
  | at  | glyph | top   | right | bottom | left  | base  |
  | --- | ----- | ----- | ----- | ------ | ----- | ----- |
  | 1,0 | ┌     | Unset | light | light  | Unset | light |
  | 1,1 | └     | light | light | Unset  | Unset | light |
  | 2,1 | ─     | Unset | light | Unset  | light | light |
  | 3,1 | ─     | Unset | light | Unset  | light | light |
  | 4,1 | ─     | Unset | light | Unset  | light | light |
  | 5,1 | ─     | Unset | light | Unset  | light | light |
  | 6,1 | ─     | Unset | light | Unset  | light | light |
  | 7,1 | ─     | Unset | light | Unset  | light | light |
  | 8,1 | ─     | Unset | light | Unset  | light | light |
  | 9,1 | ┐     | Unset | Unset | light  | light | light |
  | 9,2 | ┘     | light | Unset | Unset  | light | light |
